bug fixes with grid and overflow in x direction

--- a/StyleDemo.css
+++ b/StyleDemo.css
@@ -3,6 +3,16 @@
   --backgroundColor:
   }
 
+  html,body
+  {
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      padding: 0px;
+      overflow-x: hidden; 
+  }
+
+
 section.header h1{
   position: relative;
   padding: 0;
@@ -61,7 +71,7 @@ body {
   grid-row-gap: 20px;
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 840px) {
   .grid_items {
     grid-template-columns: 47.5% 47.5%;
     grid-column-gap: 5%;
@@ -71,7 +81,7 @@ body {
     padding: 20px;
   }
 }
-@media only screen and (min-width: 981px) {
+@media only screen and (min-width: 1081px) {
   .grid_items {
     grid-template-columns: 30% 30% 30%;
     grid-row-gap: 50px;
